# mops_info

./: .gitignore  Cargo.toml  JSON存檔優化說明.md  JSON標題修復總結.md  JSON詳細資料說明.md  MongoDB使用範例.md  MongoDB快速安裝指南.md  MongoDB整合總結.md  MongoDB防重複機制說明.md  README.md  Web查看器使用說明.md  Web查看器開發總結.md  Web查詢畫面優化說明.md  cathay_detailed_20250815.json  cathay_financial_20250815.txt  cathay_fixed_20250815.txt  cathay_title_fixed_20250815.json  check_mongodb.ps1  kejia_detailed_20250815.json  kejia_fixed_20250815.txt  kejia_title_fixed_20250815.json  mongodb_setup.bat  no_data_example_20250817.txt  start_optimized_web.bat  start_web_viewer.bat  test_date_query.bat  事實發生日擷取功能說明.md  優化Web查看器功能說明.md  功能展示.md  專案結構說明.md  文件整理總結.md  日期查詢問題修復說明.md  日期範圍查詢功能說明.md  最終專案總結.md  最終測試總結.md  本週查詢修復說明.md  條款代號擷取功能說明.md  移除複製按鈕說明.md  簡化Web查看器說明.md  自動儲存原始HTML功能說明.md  (+5 more)
docs/: README.md
docs/development/: MongoDB存檔優化說明.md
docs/features/: 條款代號對照表功能說明.md
docs/setup/: MongoDB設定說明.md  無MongoDB使用指南.md
docs/usage/: 完整功能展示.md
scripts/: README.md  examples.bat  start_simple_web.bat  test_web_server.bat
src/: main.rs  simple_web.rs  web_viewer.rs
templates/: detail.html  index.html  stats.html
