[package]
name = "twse-announcements"
version = "0.1.0"
edition = "2021"
default-run = "twse-announcements"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
scraper = "0.18"
regex = "1.0"
mongodb = "2.8"
bson = { version = "2.9", features = ["chrono-0_4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
askama = "0.12"
futures-util = "0.3"
